Remove legacy dependencies
Remove the following dependencies and replace with standard Java:
- commons-io
- guava

Note some sonar issues were fixed too for build to pass.

Issue-ID: POLICY-5592
Change-Id: I879b6db5f3013bbc774c1fa70e9c96317b43ebfe
Signed-off-by: danielhanrahan <daniel.hanrahan@est.tech>